SERVER-16490 do not reset connection outside of bgsync thread